--- a/Tiles/app/src/main/res/values/strings.xml
+++ b/Tiles/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Tiles</string>
     <string name="mainActivityText">Pathak\'s App</string>
     <string name="mainActivitytext2">Saurabh\'s App</string>
+    <string name="title_activity_index">IndexActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
