--- a/Tiles/app/src/main/res/values/strings.xml
+++ b/Tiles/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Tiles</string>
     <string name="title_activity_index">IndexActivity</string>
     <string name="tile_label">TILE</string>
+    <string name="start_game">Start Game</string>
+    <string name="resume_game">Resume Game</string>
+    <string name="scores">Scores</string>
+    <string name="welcome_text">Welcome to TILES</string>
 </resources>
