Finishing score list view

--- a/Tiles/app/src/main/res/values/strings.xml
+++ b/Tiles/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="tile_label">TILE</string>
     <string name="start_game">Start Game</string>
     <string name="resume_game">Resume Game</string>
-    <string name="scores">Scores</string>
+    <string name="scores">Best Scores</string>
     <string name="welcome_text">Welcome to TILES</string>
+    <string name="score_list">SCORE LIST</string>
 </resources>
